--- a/index.html
+++ b/index.html
@@ -4,7 +4,198 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- fontawesome link  -->
+    <script
+      src="https://kit.fontawesome.com/ce95b51972.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header id="top-header">
+      <div class="flex-container">
+        <div class="header-info">
+          <h1 class="title">Premier League friendly fixtures and results</h1>
+          <p
+            title="See how clubs are faring ahead of the new season with Palace, AFC
+            Bournemouth and West Ham in action"
+            class="title-info"
+          >
+            See how clubs are faring ahead of the new season with Palace, AFC
+            Bournemouth and West Ham in action
+          </p>
+          <p class="link-control">
+            <a class="link-btn" href="#"
+              >Watch Live <i class="fa-solid fa-chevron-right"></i
+            ></a>
+          </p>
+        </div>
+        <div class="header-img">
+          <img src="assets/Banner Image.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <!-- main section  -->
+    <main id="main-container">
+      <section class="containers">
+        <div class="position">
+          <aside class="sidenav">
+            <ul>
+              <li><a href="#">Upcoming Match</a></li>
+              <li><a href="#">All Group</a></li>
+              <li><a id="active" href="#">Blog</a></li>
+            </ul>
+          </aside>
+        </div>
+        <div class="grid-container">
+          <article class="grid-content">
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-1.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Moyes: Rangers looked sharper than us tonight</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-2.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Tuchel: Sterling to feature in Charlotte</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-3.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Moyes: Rangers looked for the summerExternal Link</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-4.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>
+                  Transfer Live&#58; Chlesea in talks over Kimpenbe transfer
+                </h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-5.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Anvegård Leaves Everton Lional Messi</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-6.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Evans Enjoying Facing Different Styles</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-7.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>Magic memories made in MelbourneExternal Link</h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-8.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>
+                  Transfer Live&#58; Chlesea in talks over Kimpenbe transfer
+                </h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+            <div class="grid-details">
+              <div class="thumbnail">
+                <img src="assets/images/image-9.jpg" alt="" />
+              </div>
+              <div class="grid-info">
+                <a href="#">Transfer</a>
+                <h3>
+                  Transfer Live&#58; Chlesea in talks over Kimpenbe transfer
+                </h3>
+                <div class="icon">
+                  <span><i class="fa-solid fa-clock"></i>10h</span>
+                  <span><i class="fa-solid fa-comment"></i>23</span>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+    <!-- footer section  -->
+    <footer class="footer-container">
+      <h1 class="f-title">Goal EAsports</h1>
+      <hr />
+      <div class="f-nav">
+        <p><a href="#">Contect Us</a></p>
+        <p><a href="#">Trems of Service</a></p>
+        <p><a href="#">Privacy Setting</a></p>
+        <p><a href="#">Goal App</a></p>
+        <p><a href="#">Goal live</a></p>
+        <p><a href="#"></a></p>
+      </div>
+      <div class="social-icon">
+        <p><i class="fa-brands fa-twitter"></i></p>
+        <p><i class="fa-brands fa-linkedin"></i></p>
+        <p><i class="fa-brands fa-pinterest"></i></p>
+        <p><i class="fa-brands fa-dribbble"></i></p>
+      </div>
+    </footer>
+  </body>
 </html>
