--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="position">
           <aside class="sidenav">
             <ul>
-              <li><a href="#">Upcoming Match</a></li>
+              <li>
+                <a target="_blank" href="files/match.html">Upcoming Match</a>
+              </li>
               <li><a href="#">All Group</a></li>
               <li><a id="active" href="#">Blog</a></li>
             </ul>
@@ -177,6 +179,9 @@
           </article>
         </div>
       </section>
+      <div class="display">
+        <a class="link-btn" href="#">View All</a>
+      </div>
     </main>
     <!-- footer section  -->
     <footer class="footer-container">
